# tsuchinoko-desktop

./: .gitignore  jsconfig.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: android-release.yml  release.yml
src/: app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/kintone/: api.rs  mod.rs  types.rs
src/components/: AddFolderModal.svelte  AddToFolderModal.svelte  ConfirmCompleteModal.svelte  ConfirmDeleteModal.svelte  ConfirmationModal.svelte  EggTimer.svelte  FaqAccordion.svelte  HelpModal.svelte  NavigationBar.svelte  NoticeModal.svelte  ParticleBackground.svelte  SearchBar.svelte  SelectKintoneAppModal.svelte  Task404Alert.svelte  TaskCommands.svelte  TaskDetailsCommands.svelte  TaskDetailsEdit.svelte  TaskDetailsView.svelte  TaskItem.svelte  TaskList.svelte  UpdaterModal.svelte
src/components/HomeTaskButtons/: AddFolder.svelte  CompleteTasks.svelte  DeleteTasks.svelte  FilterTasks.svelte  Help.svelte  SelectAllTasks.svelte  SortTasks.svelte  SyncTasks.svelte  TaskFolder.svelte
src/components/TaskDetailsButtons/: AddToGroup.svelte  BackToHome.svelte  (+5 more)
src/data/: fieldcodes.txt  particlesjs-config.json  tasks.json
src/lib/: appDateHelpers.js  appFolderManager.svelte.js  appLoginManager.svelte.js  appSecretManager.svelte.js  appTaskFilters.svelte.js  appTaskManager.svelte.js  appTaskSort.svelte.js  authCallbackHandler.svelte.js  kintoneAccessRequest.js  kintoneAddRecord.svelte.js  kintoneAuthRequest.js  kintoneDeleteRecords.svelte.js  kintoneGetRecords.svelte.js  kintoneRefreshRequest.js  kintoneUpdateRecords.svelte.js  urlListenerManager.svelte.js
src/requests/: appCheckSecret.js  appRemoveSecret.js  appSecretManager.js  appStoreSecret.js  kintoneAccessRequest.js  kintoneAuthRequest.js  kintoneRefreshRequest.js
src/routes/: +layout.js  +layout.svelte  +page.svelte
(+58 files in other folders)
